--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
+
+* {
     margin: 0px;
     font-family: 'Poppins', sans-serif;
 }
-.navbar{
+
+.navbar {
     height: 60px;
     background-color: white;
     width: 100%;
     box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.2);
 }
-.navlogo{
+
+.navlogo {
     float: left;
     margin: 8px;
 }
-@media (min-width: 500px){
-    .navlogo img{
-        display:none;
-    }
-}
-@media (max-width:500px){
-    .navlogo h1{
+
+@media (min-width: 500px) {
+    .navlogo img {
         display: none;
     }
 }
-.navlogo h1{
+
+@media (max-width:500px) {
+    .navlogo h1 {
+        display: none;
+    }
+}
+
+@media (max-width:380px) {
+    #none {
+        display: none;
+    }
+}
+
+.navlogo h1 {
     height: 45px;
     width: auto;
 }
-.navlogo img{
+
+.navlogo img {
     height: 45px;
     width: auto;
 }
-.navlinks{
+
+.navlinks {
     height: 50px;
     margin: 10px;
     float: right;
 }
-.navs, .active{
+
+.navs,
+.active {
     display: inline-flex;
     padding: 0px 10px 0px 10px;
     justify-content: center;
@@ -46,16 +62,104 @@
     text-decoration: none;
     color: black;
 }
-.active{
+
+.active {
     background-color: grey;
 }
-.navs:hover{
+
+.navs:hover {
     background-color: rgb(0, 0, 0);
     color: white;
     transition: 0.3s;
 }
-.active:hover{
+
+.active:hover {
     background-color: black;
     color: white;
     transition: 0.5s;
+}
+
+/* main blog post css */
+.container {
+    width: 95%;
+    margin: 0 auto;
+    /* Center the container horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.image-container {
+    width: 25%;
+    flex: 0 0 auto;
+    margin-right: 20px;
+}
+
+.text-container {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+img {
+    max-width: 100%;
+    width: 100%;
+    height: 250px;
+}
+
+h1,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    color: black;
+    background-color: white;
+    transition: 0.3s;
+}
+
+@media (max-width:700px) {
+    .container {
+        display: none;
+    }
+}
+
+@media (min-width:700px) {
+    .main-blog {
+        display: none;
+    }
+}
+
+.main-blog {
+    padding: 10px;
+    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.2);
+    margin: 25px;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.main-img {
+    height: 250px;
+}
+
+.main-btn {
+    cursor: pointer;
+    width: 100%;
+}
+
+.main-btn:hover {
+    transition: 0.3s;
+    color: black;
+    background-color: white;
 }
